Fix Scheduler popup resizing on small screens (#7613)

--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -399,10 +399,6 @@
     .dx-scheduler-recurrence-rule-item.dx-field-item {
         border-top: 1px solid @scheduler-appointment-form-separator-color;
 
-
-        //NOTE: temporary solution
-        max-height: 200px;
-
         .dx-recurrence-numberbox-interval-label,
         .dx-recurrence-repeat-on-label,
         .dx-recurrence-repeat-end-container-label {
