--- a/styles/widgets/material/scheduler.material.less
+++ b/styles/widgets/material/scheduler.material.less
@@ -660,10 +660,6 @@
     }
 
     .dx-scheduler-recurrence-rule-item.dx-field-item {
-
-        //NOTE: temporary solution
-        max-height: 400px;
-
         .dx-recurrence-numberbox-interval-label,
         .dx-recurrence-repeat-on-label,
         .dx-recurrence-repeat-end-container-label {
